# tool-simulation

./: .cspell.project-words.txt  .env.base  .terraform_init  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  __init__.py  sim.mk
.github/workflows/: python_ci.yml  samples.yml  validate_samples.yml
.make/: locust.mk
load-balancing/: assets.py  cargo.py
samples/: cfg.yaml  eel.json
samples/demo_1/: docker-compose.demo-1.yml
samples/demo_1/assets/: aircraft.csv  vertiports.csv
sim/: Cargo.toml
sim/src/: cfg_types.rs  customer.rs  eel_types.rs  main.rs
tools/gen_eel/: Cargo.toml
tools/gen_eel/src/: main.rs
tools/validate_config/: Cargo.toml
tools/validate_config/src/: main.rs
tools/validate_eel/: Cargo.toml
tools/validate_eel/src/: main.rs
types/: Cargo.toml  lib.rs
types/cfg/: customer_agent.rs  types.rs
types/eel/: customer_events.rs  types.rs
types/events/: customer_events.rs  types.rs
