[package]
edition = "2021"
name    = "tool-simulation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono                = { version = "0.4.22", features = ["serde"] }
clap                  = { version = "4.0.14", features = ["derive"] }
futures               = "0.3.25"
hyper                 = { version = "0.14", features = ["full"] }
serde                 = { version = "1.0.145", features = ["derive"] }
serde_json            = "1.0.86"
serde_yaml            = { version = "0.9.13" }
sim_types             = { path = "../types/" }
svc-cargo-client-rest = { git = "https://github.com/Arrow-air/svc-cargo.git" }
tokio                 = { version = "1", features = ["full"] }
