[package]
edition = "2021"
name    = "tool-simulation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono                  = { version = "0.4", features = ["serde"] }
clap                    = { version = "4.0", features = ["derive"] }
futures                 = "0.3"
hyper                   = { version = "0.14", features = ["full"] }
rand                    = "0.8"
serde                   = { version = "1.0", features = ["derive"] }
serde_json              = "1.0"
serde_yaml              = { version = "0.9" }
sim_types               = { path = "../types/" }
svc-cargo-client-rest   = { git = "https://github.com/Arrow-air/svc-cargo", branch = "main" }
svc-storage-client-grpc = { git = "https://github.com/Arrow-air/svc-storage", branch = "main" }
tokio                   = { version = "1", features = ["full"] }
tonic                   = "0.8"
