[package]
name = "validate_eel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.13"
serde = { version="1.0.145", features=["derive"] }
chrono = { version="0.4.22", features=["serde"] }
svc-cargo-client-rest = { git="https://github.com/Arrow-air/svc-cargo.git" }
serde_json = "1.0.86"
